# rust-sample3

./: Cargo.toml  README.md  test_post.sh
src/: lib.rs  main.rs
tests/: health_check.rs
